--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Fare Kiosk UI</string>
     <string name="title_activity_main">Fare Kiosk UI</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="package_name">kiosk.fare.ui</string>
+    <string name="custom_url_scheme">kiosk.fare.ui</string>
 </resources>
